--- a/FoodTrial.Data/FoodTrial.Data.csproj
+++ b/FoodTrial.Data/FoodTrial.Data.csproj
@@ -54,8 +54,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Food.cs" />
     <Compile Include="IdentityModels.cs" />
+    <Compile Include="Medicine.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Trial.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
