--- a/FoodTrial.Models/FoodTrial.Models.csproj
+++ b/FoodTrial.Models/FoodTrial.Models.csproj
@@ -54,11 +54,24 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FoodListItem.cs" />
+    <Compile Include="MedicineListItem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TrialListItem.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\FoodTrial.Data\FoodTrial.Data.csproj">
+      <Project>{509fb80d-ba8d-43db-9015-6a76124a03c1}</Project>
+      <Name>FoodTrial.Data</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\FoodTrial.Services\FoodTrial.Services.csproj">
+      <Project>{196938c7-8d5d-4207-90fa-3c9e45b1bfc8}</Project>
+      <Name>FoodTrial.Services</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
