--- a/FoodTrial.Services/FoodTrial.Services.csproj
+++ b/FoodTrial.Services/FoodTrial.Services.csproj
@@ -55,6 +55,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="FoodService.cs" />
+    <Compile Include="MedicineService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TrialService.cs" />
   </ItemGroup>
