--- a/FoodTrial.Models/FoodTrial.Models.csproj
+++ b/FoodTrial.Models/FoodTrial.Models.csproj
@@ -55,6 +55,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="FoodCreate.cs" />
+    <Compile Include="FoodDetail.cs" />
     <Compile Include="FoodListItem.cs" />
     <Compile Include="MedicineCreate.cs" />
     <Compile Include="MedicineListItem.cs" />
