FoodDetail view added

--- a/FoodTrial.MVC/FoodTrial.MVC.csproj
+++ b/FoodTrial.MVC/FoodTrial.MVC.csproj
@@ -243,6 +243,7 @@
     <Content Include="Views\Food\Create.cshtml" />
     <Content Include="Views\Trial\Create.cshtml" />
     <Content Include="Views\Medicine\Create.cshtml" />
+    <Content Include="Views\Food\Details.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
