--- a/FoodTrial.Models/FoodTrial.Models.csproj
+++ b/FoodTrial.Models/FoodTrial.Models.csproj
@@ -58,9 +58,11 @@
     <Compile Include="FoodDetail.cs" />
     <Compile Include="FoodListItem.cs" />
     <Compile Include="MedicineCreate.cs" />
+    <Compile Include="MedicineDetail.cs" />
     <Compile Include="MedicineListItem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TrialCreate.cs" />
+    <Compile Include="TrialDetail.cs" />
     <Compile Include="TrialListItem.cs" />
   </ItemGroup>
   <ItemGroup>
