--- a/FoodTrial.MVC/FoodTrial.MVC.csproj
+++ b/FoodTrial.MVC/FoodTrial.MVC.csproj
@@ -245,6 +245,7 @@
     <Content Include="Views\Medicine\Create.cshtml" />
     <Content Include="Views\Food\Details.cshtml" />
     <Content Include="Views\Trial\Details.cshtml" />
+    <Content Include="Views\Medicine\Details.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
