--- a/FoodTrial.MVC/FoodTrial.MVC.csproj
+++ b/FoodTrial.MVC/FoodTrial.MVC.csproj
@@ -247,6 +247,7 @@
     <Content Include="Views\Trial\Details.cshtml" />
     <Content Include="Views\Medicine\Details.cshtml" />
     <Content Include="Views\Food\Edit.cshtml" />
+    <Content Include="Views\Trial\Edit.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
