--- a/FoodTrial.MVC/FoodTrial.MVC.csproj
+++ b/FoodTrial.MVC/FoodTrial.MVC.csproj
@@ -250,6 +250,7 @@
     <Content Include="Views\Trial\Edit.cshtml" />
     <Content Include="Views\Medicine\Edit.cshtml" />
     <Content Include="Views\Food\Delete.cshtml" />
+    <Content Include="Views\Trial\Delete.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
