--- a/FoodTrial.MVC/FoodTrial.MVC.csproj
+++ b/FoodTrial.MVC/FoodTrial.MVC.csproj
@@ -251,6 +251,7 @@
     <Content Include="Views\Medicine\Edit.cshtml" />
     <Content Include="Views\Food\Delete.cshtml" />
     <Content Include="Views\Trial\Delete.cshtml" />
+    <Content Include="Views\Medicine\Delete.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
