--- a/FoodTrial.Data/FoodTrial.Data.csproj
+++ b/FoodTrial.Data/FoodTrial.Data.csproj
@@ -57,12 +57,29 @@
     <Compile Include="Food.cs" />
     <Compile Include="IdentityModels.cs" />
     <Compile Include="Medicine.cs" />
+    <Compile Include="Migrations\202202021648407_InitialCreate.cs" />
+    <Compile Include="Migrations\202202021648407_InitialCreate.Designer.cs">
+      <DependentUpon>202202021648407_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202202110114014_NullableForeignKey.cs" />
+    <Compile Include="Migrations\202202110114014_NullableForeignKey.Designer.cs">
+      <DependentUpon>202202110114014_NullableForeignKey.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Trial.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\202202021648407_InitialCreate.resx">
+      <DependentUpon>202202021648407_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202202110114014_NullableForeignKey.resx">
+      <DependentUpon>202202110114014_NullableForeignKey.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
