--- a/FoodTrial.MVC/FoodTrial.MVC.csproj
+++ b/FoodTrial.MVC/FoodTrial.MVC.csproj
@@ -203,6 +203,7 @@
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
     <Content Include="Scripts\modernizr-2.8.3.js" />
+    <Content Include="Views\Images\anna headshot winter.jpg" />
     <Content Include="Views\Images\christin-hume-Hcfwew744z4-unsplash.jpg" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
