--- a/FoodTrial.MVC/FoodTrial.MVC.csproj
+++ b/FoodTrial.MVC/FoodTrial.MVC.csproj
@@ -186,6 +186,11 @@
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\Images\anna headshot winter.jpg" />
+    <Content Include="Content\Images\Buttons for Home Page Food Trial.png" />
+    <Content Include="Content\Images\christin-hume-Hcfwew744z4-unsplash.jpg" />
+    <Content Include="Content\Images\Front Cover Food Trial Second Part.png" />
+    <Content Include="Content\Images\Front Cover Food Trial.png" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
@@ -203,8 +208,6 @@
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
     <Content Include="Scripts\modernizr-2.8.3.js" />
-    <Content Include="Views\Images\anna headshot winter.jpg" />
-    <Content Include="Views\Images\christin-hume-Hcfwew744z4-unsplash.jpg" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
