--- a/FoodTrial.MVC/FoodTrial.MVC.csproj
+++ b/FoodTrial.MVC/FoodTrial.MVC.csproj
@@ -189,8 +189,11 @@
     <Content Include="Content\Images\anna headshot winter.jpg" />
     <Content Include="Content\Images\Buttons for Home Page Food Trial.png" />
     <Content Include="Content\Images\christin-hume-Hcfwew744z4-unsplash.jpg" />
+    <Content Include="Content\Images\Create Food Trial pic.jpg" />
+    <Content Include="Content\Images\Food list.jpg" />
     <Content Include="Content\Images\Front Cover Food Trial Second Part.png" />
     <Content Include="Content\Images\Front Cover Food Trial.png" />
+    <Content Include="Content\Images\Past Food Trials.jpg" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
