--- a/FoodTrial.MVC/FoodTrial.MVC.csproj
+++ b/FoodTrial.MVC/FoodTrial.MVC.csproj
@@ -192,9 +192,13 @@
     <Content Include="Content\Images\christin-hume-Hcfwew744z4-unsplash.jpg" />
     <Content Include="Content\Images\Create Food Trial pic.jpg" />
     <Content Include="Content\Images\Food list.jpg" />
+    <Content Include="Content\Images\Food Trial Second section no words.png" />
     <Content Include="Content\Images\Front Cover Food Trial Second Part.png" />
     <Content Include="Content\Images\Front Cover Food Trial.png" />
+    <Content Include="Content\Images\Kid Trialing Strawberry.png" />
+    <Content Include="Content\Images\medicine herbs food trial.png" />
     <Content Include="Content\Images\Past Food Trials.jpg" />
+    <Content Include="Content\Images\woman eating.png" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
