--- a/FoodTrial.MVC/FoodTrial.MVC.csproj
+++ b/FoodTrial.MVC/FoodTrial.MVC.csproj
@@ -192,6 +192,7 @@
     <Content Include="Content\Images\christin-hume-Hcfwew744z4-unsplash.jpg" />
     <Content Include="Content\Images\Create Food Trial pic.jpg" />
     <Content Include="Content\Images\Food list.jpg" />
+    <Content Include="Content\Images\Food Trial Helper Logo.png" />
     <Content Include="Content\Images\Food Trial Second section no words.png" />
     <Content Include="Content\Images\Front Cover Food Trial Second Part.png" />
     <Content Include="Content\Images\Front Cover Food Trial.png" />
