changed cards homepage

--- a/FoodTrial.MVC/FoodTrial.MVC.csproj
+++ b/FoodTrial.MVC/FoodTrial.MVC.csproj
@@ -199,6 +199,7 @@
     <Content Include="Content\Images\Kid Trialing Strawberry.png" />
     <Content Include="Content\Images\medicine herbs food trial.png" />
     <Content Include="Content\Images\Past Food Trials.jpg" />
+    <Content Include="Content\Images\Second section no word food trial.png" />
     <Content Include="Content\Images\woman eating.png" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
